# template_cpp_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.scripts/: install_clang9.sh  install_gcc_alternatives.sh  log_environment.sh
src/: Foo.h  main.cpp
